--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
     <head>
         <meta charset="utf-8">
         <title>Doãn Trung Anh</title>
+        <link rel="icon" href="./imgs/favicon.png">
     </head>
     <body>
-        <h1>Doãn Trung Anh</h1>
+        <h1>Doãn Trung Anh - 22/09/1997</h1>
+        <img style="max-width: 25%;" src="./imgs/favicon.png"/>
     </body>
 </html>
