--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <title>Doãn Trung Anh</title>
-        <link rel="icon" href="imgs/favicon.png">
+        <link rel="icon" href="imgs/favicon.ico">
     </head>
     <body>
         <h1>Doãn Trung Anh - 22/09/1997</h1>
